# sphinx

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.dev.yaml  compose.yaml  config.yaml
migrations/: 20240813100733_create_users_table.sql  20240813103453_create_identities_table.sql  20240815101947_create_sessions_table.sql
scripts/: all_migrations.sh  init_db.sh
src/: authenticator.rs  config.rs  lib.rs  mailer.rs  main.rs  oauth.rs  password.rs
src/config/: application.rs  database.rs  jwt.rs  mod.rs  oauth.rs  otp.rs  redis.rs  smtp.rs
src/models/: email.rs  identity.rs  mod.rs  password.rs  session.rs  token.rs  user.rs
src/oauth/: discord.rs
src/repositories/: auth.rs  identity.rs  mod.rs  session.rs  token.rs  user.rs
src/routes/: confirm_email.rs  email_auth.rs  health.rs  mod.rs  reset_password.rs  sign_out.rs
src/routes/oauth/: discord.rs  github.rs  google.rs  mod.rs
