[package]
name = "sphinx"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
http = "1.1.0"
oauth2 = "4.4.2"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "json", "ipnetwork"] }
config = { version = "0.14.0" }
serde-aux = "4.5.0"
thiserror = "1.0.63"
dotenv = "0.15.0"
redis = { version = "0.26.1", features = ["r2d2", "tokio-comp"] }
secrecy = { version = "0.8.0", features = ["serde"] }
jsonwebtoken = "9.3.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
validator = "0.18.1"
url = { version = "2.5.2", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.125"
lettre = { version = "0.11.7", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }

[profile.release]
lto = true
